force-app/main/default/objects/EYI_Demand__c/EYI_Demand__c.object-meta.xml
<CustomObject>
    <label>Demand</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Demand Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demands</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>