force-app/main/default/objects/EYI_Demand__c/fields/Escalation_Approval__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Approval__c</fullName>
    <label>Escalation Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved by CRM Head</fullName>
            </value>
            <value>
                <fullName>Rejected by CRM Head</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>