force-app/main/default/objects/EYI_Demand__c/fields/EY_Billing_Date_From__c.field-meta.xml
<CustomField>
    <fullName>EY_Billing_Date_From__c</fullName>
    <label>Billing Date From</label>
    <type>Date</type>
</CustomField>