force-app/main/default/objects/EYI_Demand__c/fields/EYI_Activity_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Activity_No__c</fullName>
    <label>Activity No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>