force-app/main/default/objects/EYI_Demand__c/fields/EYI_Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Actual_Date__c</fullName>
    <label>Actual Date</label>
    <type>Date</type>
</CustomField>