force-app/main/default/objects/EYI_Demand__c/fields/EYI_Amount_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>EYI_Amount_to_be_paid__c</fullName>
    <label>Milestone Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>