force-app/main/default/objects/EYI_Demand__c/fields/EYI_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Billing_Date__c</fullName>
    <label>Billing Date</label>
    <type>Date</type>
</CustomField>