force-app/main/default/objects/EYI_Demand__c/fields/EYI_Billing_Date_To__c.field-meta.xml
<CustomField>
    <fullName>EYI_Billing_Date_To__c</fullName>
    <label>Billing Date To</label>
    <type>Date</type>
</CustomField>