force-app/main/default/objects/EYI_Demand__c/fields/EYI_Collectible_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Collectible_Status__c</fullName>
    <description>This field used to segregate the collectable and non-collectable amount.</description>
    <label>Collectible Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collectible</fullName>
                <default>true</default>
                <label>Collectible</label>
            </value>
            <value>
                <fullName>Non-Collectible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>