force-app/main/default/objects/EYI_Demand__c/fields/EYI_Courtesy_Call_Esc_L2__c.field-meta.xml
<CustomField>
    <fullName>EYI_Courtesy_Call_Esc_L2__c</fullName>
    <label>Courtesy Call Esc L2</label>
    <type>DateTime</type>
</CustomField>