force-app/main/default/objects/EYI_Demand__c/fields/EYI_Courtesy_Call_Esc_L3__c.field-meta.xml
<CustomField>
    <fullName>EYI_Courtesy_Call_Esc_L3__c</fullName>
    <label>Courtesy Call Esc L3</label>
    <type>DateTime</type>
</CustomField>