force-app/main/default/objects/EYI_Demand__c/fields/EYI_CRM_Head__c.field-meta.xml
<CustomField>
    <fullName>EYI_CRM_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Demands</relationshipName>
    <type>Lookup</type>
</CustomField>