force-app/main/default/objects/EYI_Demand__c/fields/EYI_Demand_Aging__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Aging__c</fullName>
    <formula>TODAY() - EYI_Actual_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Aging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>