force-app/main/default/objects/EYI_Demand__c/fields/EYI_Demand_Cancel_date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Cancel_date__c</fullName>
    <label>Demand Cancel date</label>
    <type>Date</type>
</CustomField>