force-app/main/default/objects/EYI_Demand__c/fields/EYI_Demand_Cancellation_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Cancellation_Number__c</fullName>
    <label>Demand Cancellation Number</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>