force-app/main/default/objects/EYI_Demand__c/fields/EYI_Demand_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Payment_Status__c</fullName>
    <label>Demand Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>