force-app/main/default/objects/EYI_Demand__c/fields/EYI_Demand_Percentage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Percentage__c</fullName>
    <label>Demand Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>