force-app/main/default/objects/EYI_Demand__c/fields/EYI_Demand_Raise_Escalation_L3__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Raise_Escalation_L3__c</fullName>
    <label>Demand Raise Escalation L3</label>
    <type>DateTime</type>
</CustomField>