force-app/main/default/objects/EYI_Demand__c/fields/EYI_Demand_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Send_Date__c</fullName>
    <label>Demand Send Date</label>
    <type>Date</type>
</CustomField>