force-app/main/default/objects/EYI_Demand__c/fields/EYI_Demand_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Status__c</fullName>
    <label>Demand Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demand Raised</fullName>
            </value>
            <value>
                <fullName>Demand Sent</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Demand Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>In progress</fullName>
                <isActive>false</isActive>
                <label>In progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>