force-app/main/default/objects/EYI_Demand__c/fields/EYI_ESIGN_FLAG__c.field-meta.xml
<CustomField>
    <fullName>EYI_ESIGN_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ESIGN FLAG</label>
    <type>Checkbox</type>
</CustomField>