force-app/main/default/objects/EYI_Demand__c/fields/EYI_IsOtherChargeDemand__c.field-meta.xml
<CustomField>
    <fullName>EYI_IsOtherChargeDemand__c</fullName>
    <label>IsOtherChargeDemand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>