force-app/main/default/objects/EYI_Demand__c/fields/EYI_Milestone_Block_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Milestone_Block_Date__c</fullName>
    <label>Milestone Block Date</label>
    <type>DateTime</type>
</CustomField>