force-app/main/default/objects/EYI_Demand__c/fields/EYI_Monthly_Target__c.field-meta.xml
<CustomField>
    <fullName>EYI_Monthly_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Target</label>
    <referenceTo>Monthly_Target__c</referenceTo>
    <relationshipLabel>Demands</relationshipLabel>
    <relationshipName>Demands</relationshipName>
    <type>Lookup</type>
</CustomField>