force-app/main/default/objects/EYI_Demand__c/fields/EYI_Non_Collectible_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Non_Collectible_End_Date__c</fullName>
    <label>Non-Collectible End Date</label>
    <type>Date</type>
</CustomField>