force-app/main/default/objects/EYI_Demand__c/fields/EYI_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fiel created to update date for specific demand.</description>
    <label>Payment Schedule</label>
    <referenceTo>EYI_Payment_Schedule__c</referenceTo>
    <relationshipLabel>Demands</relationshipLabel>
    <relationshipName>Demands</relationshipName>
    <type>Lookup</type>
</CustomField>