force-app/main/default/objects/EYI_Demand__c/fields/EYI_Reason_for_Non_Collectible__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reason_for_Non_Collectible__c</fullName>
    <label>Reason for Non-Collectible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan Eligibility Issue</fullName>
            </value>
            <value>
                <fullName>Fund Issue</fullName>
            </value>
            <value>
                <fullName>Not Reachable/Responding</fullName>
            </value>
            <value>
                <fullName>Customer Availability Issue</fullName>
            </value>
            <value>
                <fullName>Legal dispute</fullName>
            </value>
            <value>
                <fullName>Management reference customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>