force-app/main/default/objects/EYI_Demand__c/fields/EYI_Remark__c.field-meta.xml
<CustomField>
    <fullName>EYI_Remark__c</fullName>
    <label>Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>