force-app/main/default/objects/EYI_Demand__c/fields/EYI_SAP_Cancelled_ODN_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Cancelled_ODN_No__c</fullName>
    <label>SAP Cancelled ODN No</label>
    <length>26</length>
    <type>Text</type>
</CustomField>