force-app/main/default/objects/EYI_Demand__c/fields/EYI_SAP_Demand_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Demand_Number__c</fullName>
    <externalId>true</externalId>
    <label>SAP Demand Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>