force-app/main/default/objects/EYI_Demand__c/fields/EYI_SAP_IRN_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_IRN_No__c</fullName>
    <label>SAP IRN No</label>
    <length>64</length>
    <type>Text</type>
</CustomField>