force-app/main/default/objects/EYI_Demand__c/fields/EYI_SAP_IRN_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_IRN_Status__c</fullName>
    <label>SAP IRN Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>