force-app/main/default/objects/EYI_Demand__c/fields/EYI_SapCancellationDocumentNo__c.field-meta.xml
<CustomField>
    <fullName>EYI_SapCancellationDocumentNo__c</fullName>
    <label>SapCancellationDocumentNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>