force-app/main/default/objects/EYI_Demand__c/fields/EYI_Segregation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Segregation__c</fullName>
    <description>This field used segregate the demand based on the outstanding.</description>
    <label>Segregation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>