force-app/main/default/objects/EYI_Demand__c/fields/EYI_Total_Demand_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Demand_Amount__c</fullName>
    <label>Total Demand Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>