force-app/main/default/objects/EYI_Demand__c/fields/EYI_Usage_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_Usage_Description__c</fullName>
    <label>Usage Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10th Installment</fullName>
            </value>
            <value>
                <fullName>3rd Installment</fullName>
            </value>
            <value>
                <fullName>4th Installment</fullName>
            </value>
            <value>
                <fullName>5th Installment</fullName>
            </value>
            <value>
                <fullName>6th Installment</fullName>
            </value>
            <value>
                <fullName>7th Installment</fullName>
            </value>
            <value>
                <fullName>8th Installment</fullName>
            </value>
            <value>
                <fullName>9th Installment</fullName>
            </value>
            <value>
                <fullName>Booking Amount</fullName>
            </value>
            <value>
                <fullName>CLUBHOUSECHARGES</fullName>
            </value>
            <value>
                <fullName>LEGALCHARGES</fullName>
            </value>
            <value>
                <fullName>MAINTENANCECHARGES</fullName>
            </value>
            <value>
                <fullName>MAINTENANCEDEPOSIT</fullName>
            </value>
            <value>
                <fullName>MSEBCHARGES</fullName>
            </value>
            <value>
                <fullName>On Booking</fullName>
            </value>
            <value>
                <fullName>On Completion Electrical &amp; Plumbing Work</fullName>
            </value>
            <value>
                <fullName>On Completion of 10th Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of 12th Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of 2nd Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of 4th Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of 6th Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of 8th Slab</fullName>
            </value>
            <value>
                <fullName>On Completion of Plinth</fullName>
            </value>
            <value>
                <fullName>On Completion of the walls &amp; internal pl</fullName>
            </value>
            <value>
                <fullName>On or before Agreement</fullName>
            </value>
            <value>
                <fullName>On Possession</fullName>
            </value>
            <value>
                <fullName>On Registration of Agreement</fullName>
            </value>
            <value>
                <fullName>SDR-NONRECOVER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>