force-app/main/default/objects/EYI_Demand__c/fields/EYI_WBS_Element__c.field-meta.xml
<CustomField>
    <fullName>EYI_WBS_Element__c</fullName>
    <label>WBS Element</label>
    <length>100</length>
    <type>Text</type>
</CustomField>