force-app/main/default/objects/EYI_Demand__c/fields/Termination_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Termination_Approval_Status__c</fullName>
    <label>Termination Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved by CRM Head</fullName>
            </value>
            <value>
                <fullName>Rejected by CRM Head</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>