force-app/main/default/objects/EYI_Demand__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Usage_Description__c</columns>
    <columns>EYI_Opportunity__c</columns>
    <columns>EYI_Demand_Status__c</columns>
    <columns>EYI_Demand_Type__c</columns>
    <columns>EYI_Actual_Date__c</columns>
    <columns>EYI_Amount_to_be_paid__c</columns>
    <columns>EYI_SAP_Demand_Number__c</columns>
    <columns>EYI_Monthly_Target__c</columns>
    <columns>EYI_Collectible_Status__c</columns>
    <columns>EYI_Billing_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>EYI_ESIGN_FLAG__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>