force-app/main/default/objects/EYI_Demand__c/listViews/Avante_Grande_Demands.listView-meta.xml
<ListView>
    <fullName>Avante_Grande_Demands</fullName>
    <columns>NAME</columns>
    <columns>EYI_Billing_Date__c</columns>
    <columns>EYI_Actual_Date__c</columns>
    <columns>EYI_Demand_Percentage__c</columns>
    <columns>EYI_Demand_Payment_Status__c</columns>
    <columns>EYI_Demand_Status__c</columns>
    <columns>EYI_SAP_Demand_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>EYI_Opportunity__c</columns>
    <columns>EYI_Usage_Description__c</columns>
    <columns>EYI_Demand_Type__c</columns>
    <columns>EYI_Usage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EYI_Opportunity__c</field>
        <operation>contains</operation>
        <value>Amit Shah</value>
    </filters>
    <label>Avante Grande Demands</label>
</ListView>