force-app/main/default/objects/EYI_Demand__c/listViews/Raised_Demand.listView-meta.xml
<ListView>
    <fullName>Raised_Demand</fullName>
    <columns>NAME</columns>
    <columns>EYI_Demand_Status__c</columns>
    <columns>EYI_SAP_Demand_Number__c</columns>
    <columns>EYI_Usage_Description__c</columns>
    <columns>EYI_Demand_Raise_Date__c</columns>
    <columns>EYI_Actual_Date__c</columns>
    <columns>EYI_Billing_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>EYI_ESIGN_FLAG__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EYI_Demand_Status__c</field>
        <operation>equals</operation>
        <value>Demand Raised</value>
    </filters>
    <filters>
        <field>EYI_ESIGN_FLAG__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Raised Demand</label>
</ListView>